# IMP-transfer

./: README.md
att_mil_model_github/: README.md  pyproject.toml  requirements.txt
att_mil_model_github/configs/: example_paths.yaml
att_mil_model_github/scripts/: main_hyper_params.py
att_mil_model_github/src/att_mil_model/: __init__.py
att_mil_model_github/src/att_mil_model/data/: bags_dataset.py
att_mil_model_github/src/att_mil_model/models/: att_mil_model.py
att_mil_model_github/src/att_mil_model/training/: early_stopping.py  train_cv.py
att_mil_model_github/src/att_mil_model/tuning/: hyper_params_optimizer.py
att_mil_model_github/src/att_mil_model/utils/: plotting.py
